# whatsapp-tell

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
gateway/: Cargo.toml
gateway/src/: consent_flow.rs  lib.rs  message_handler.rs  signature.rs  webhook.rs
processor/: Cargo.toml
processor/src/: audio_processor.rs  lambda_orchestrator.rs  lib.rs  media_fetcher.rs
reporting/: Cargo.toml
reporting/src/: lib.rs  message_formatter.rs  pdf_generator.rs  report_generator.rs
shared/: Cargo.toml
shared/src/: aws.rs  errors.rs  lib.rs  tracing.rs  types.rs
